프론트 좋아요 버튼 클릭 시 이미지 변경, 좋아요 수 반영, 쿠키&수집기 완료